# misc

./: .gitignore  Cargo.toml  Dockerfile  README.md  bad.parquet  benchmark.py  cpython.html  presentation.py  pyproject.toml  run.html  run.ipynb  test.py  test_demo.py
.github/workflows/: ci.yaml  demo.yaml
app/: app.py  db.py  main.py
infra/: Pulumi.yaml  index.ts  package-lock.json
src/: lib.rs
tests/: conftest.py  test_app.py
workspaces/fork-memory/: pyproject.toml
workspaces/fork-memory/src/fork_memory/: main.py  model.py  run.sh
workspaces/serving/: pyproject.toml
workspaces/serving/src/serving/: main.py
