[tool.poetry]
name = "fork-memory"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "fork_memory", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
transformers = "^4.27.4"
datasets = "^2.11.0"
torch = "^2.0.0"
httpx = "^0.23.3"
anyio = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
