[tool.poetry]
name = "serving"
version = "0.0.0"
description = "k8s vs. Gunicorn"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = ">=0.21.1"}
gunicorn = "^20.1.0"
fastapi = "^0.95.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
